apps/production/new-new-boplats/frontend/deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: new-new-boplats-frontend
spec:
  replicas: 3
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: new-new-boplats-frontend
  template:
    spec:
      containers:
        - name: new-new-boplats-frontend
          image: artifactory.local.hejsan.xyz/docker/josmase/new-new-boplats-frontend:0.0.1
          resources:
            limits:
              memory: 512Mi
              cpu: "1"
            requests:
              memory: 256Mi
              cpu: "0.2"
