apps/production/new-new-boplats/frontend/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: new-new-boplats-frontend
spec:
  selector:
    app: new-new-boplats-frontend
  ports:
    - name: http
      targetPort: 80
      port: 80
