apps/production/new-new-boplats/frontend/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: new-new-boplats-frontend
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`new-new-boplats.local.hejsan.xyz`)
      kind: Rule
      services:
        - name: new-new-boplats-frontend
          port: http
      middlewares:
        - name: default-headers

  tls:
    secretName: local-hejsan-xyz-tls
